# smilecook

./: app.py  config.py  pyproject.toml  requirements.txt
migrations/versions/: 3719802cf582_.py
models/: recipe.py  user.py
resources/: recipe.py
tests/: test_smilecook.py
